      for each client. Will improve memory usage with large numbers of clients.
    * Added partial Norwegian translation.

    Windows

    * Reduced executable size by aggressively optimising MSVC linking
      and padding boundaries.
    * Reduced executable size by aggressively stripping unneeded options
      from wxWidgets.

v2.3.4 (04/11/08)

    General

    * Fixed missing core support.
    * Fixed clients never reloading.
    * Improved CPU usage by altering message log routines.
    * Altered clientstab.txt to be tab delimited.

    Windows

    * Installer now cleans up old config folder which is no longer used.
    * Release generator language support fixed.

v2.3.3 (01/11/08)

    General

    * Added new cores support.
    * Made "Last 3 Frames" the default PPD/ETA calculation method.
    * Added multiple new data columns.
    * Made client management more intuitive by adding a "Clients" menu.
    * Made main window menus more intuitive.
    * Added ability to remove the "WU Info" panel from view.
    * Updated queue structure to qd FR 069
    * Add ability to select custom web output templates.
    * Altered About Dialog text.
    * Added custom variables to web output templates.
    * Fixed GPUv2 always reporting PPD as "inaccurate."
    * Updated folding support forum link in "Web" menu (thanks to Mark Gerber).
    * Fixed div by zero error that affected GPU2 clients (thanks to John
      Daiker).
    * Fixed quick refresh crash bug (thanks to John Daiker).
    * Fixed file manager bug with paths containing spaces (thanks to John
      Daiker).
    * Fixed team number and username refresh issue (thanks to John Daiker).
    * Changed client list style and removed "zebra" background colour scheme.
    * Issue time no longer used as download time.
    * Added ability to disable clients.
    * Improved sorting algorithm.
    * Added client pause detection.
    * Added support for truncating usernames in the web output.

    Windows
