@@ -31,6 +31,7 @@ SVN
       and padding boundaries.
     * Reduced executable size by aggressively stripping unneeded options
       from wxWidgets.
+    * Added --local option to allow config to be managed from local directory.
 
 v2.3.4 (04/11/08)
 
